feat: week 17-18 portfolio API, investment. executed , tests,openai
